big update for entity details + dictionary management views